deploy/yandex-mks/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moysklad-reco-backend
  labels:
    app: moysklad-reco-backend
spec:
  type: NodePort
  selector:
    app: moysklad-reco-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
